<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/activityBackground4">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_main2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="rtrk.pnrs1.ra94_2013.projekat1.Main2Activity">

        <EditText
            android:id="@+id/taskName"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="15dp"
            android:layout_alignParentTop="true"
            android:hint="@string/taskName"
            android:selectAllOnFocus="true"
            android:gravity="center"
            android:background="@drawable/round_editbox"/>

        <TextView
            android:id="@+id/textbox1"
            android:text="@string/textbox1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/taskName"
            android:layout_marginBottom="15dp"
            android:gravity="center"/>

        <LinearLayout
            android:id="@+id/linear1"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@id/textbox1"
            android:weightSum="2">

            <Button
                android:id="@+id/time"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/regular_button"/>

            <Button
                android:id="@+id/date"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/regular_button"/>
        </LinearLayout>

        <EditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_below="@id/linear1"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:hint="@string/description"
            android:selectAllOnFocus="true"
            android:gravity="center"
            android:background="@drawable/round_editbox"/>

        <CheckBox
            android:id="@+id/checkbox"
            android:text="@string/checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="5dp"
            android:layout_below="@id/description"/>

        <TextView
            android:id="@+id/textbox2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/checkbox"
            android:layout_marginBottom="10dp"
            android:text="@string/textbox2"
            android:gravity="center"/>

        <LinearLayout
            android:id="@+id/linear2"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/textbox2"
            android:layout_marginBottom="10dp"
            android:weightSum="3">

            <Button
                android:id="@+id/red"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/red_button_enabled"/>

            <Button
                android:id="@+id/yellow"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/yellow_button_enabled"/>

            <Button
                android:id="@+id/green"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/green_button_enabled"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear3"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="5dp"
            android:layout_below="@id/linear2"
            android:weightSum="2">

            <Button
                android:id="@+id/add"
                android:textAllCaps="false"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/regular_button"
                android:gravity="center"/>

            <Button
                android:id="@+id/cancel"
                android:textAllCaps="false"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/regular_button"
                android:gravity="center"/>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>
